Polygon model class